[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pewlib"
version = "0.10.5"
dependencies = [
    "numpy>=1.22",
]
description = "Import, processing and export library for LA-ICP-MS data."
readme = "README.md"
requires-python = ">= 3.9"
license = {file = "LICENSE"}
authors = [{name = "Thomas Lockwood", email = "thomas.lockwood@uts.edu.au"}]

[project.optional-dependencies]
tests = ["pytest"]

[project.urls]
Repository = "https://gtihub.com/djdt/pewlib"
Documentation = "https://djdt.github.io/pewlib"

[project.scripts]
pewlib = "pewlib.__main__:main"

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
